# d

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml
crates/d-cli/: Cargo.toml
crates/d-cli/src/: cli.rs  main.rs
crates/d-core/: Cargo.toml
crates/d-core/src/: config.rs  detect.rs  doctor.rs  hooks.rs  lib.rs  logging.rs  platform.rs  resolve.rs  types.rs  workspace.rs
crates/d-django/: Cargo.toml
crates/d-django/src/: lib.rs
crates/d-docker/: Cargo.toml
crates/d-docker/src/: lib.rs
crates/d-flutter/: Cargo.toml
crates/d-flutter/src/: lib.rs
crates/d-go/: Cargo.toml
crates/d-go/src/: lib.rs
crates/d-gradle/: Cargo.toml
crates/d-gradle/src/: lib.rs
crates/d-node/: Cargo.toml
crates/d-node/src/: lib.rs
crates/d-python/: Cargo.toml
crates/d-python/src/: lib.rs
crates/d-rails/: Cargo.toml
crates/d-rails/src/: lib.rs
crates/d-rust/: Cargo.toml
crates/d-rust/src/: lib.rs
crates/d-swift/: Cargo.toml
crates/d-swift/src/: lib.rs
