[workspace]
members = [
    "crates/d-cli",
    "crates/d-core",
    "crates/d-flutter",
    "crates/d-docker",
    "crates/d-node",
    "crates/d-python",
    "crates/d-django",
    "crates/d-rust",
    "crates/d-go",
    "crates/d-gradle",
    "crates/d-rails",
    "crates/d-swift",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Ajaysainisd/d"
